# webrtc_plugin

./: .gitignore  .gitmodules  AUTHORS  INSTALL  LICENSE  README  README.md  RELEASE_NOTES  buildplugin.sh  create_libwebrtc.sh  create_master_libs.sh  getdeps.sh  peerconnection.js  prep_webrtc.sh  prep_webrtc_linux.sh  prep_webrtc_mac.sh  prepdeps.sh  prepplugin.sh  rebuild_plugin.sh  rebuild_webrtc.sh  testdeps.sh  webrtc_repo_mods.txt
dep_mods/common/: libjingle.diff  libjingle_build.diff  webrtc.diff
dep_mods/linux/webrtc/: prep.sh
dep_mods/linux/webrtc/trunk/src/modules/video_coding/main/source/: internal_defines.h
dep_mods/linux/webrtc/trunk/src/video_engine/: vie_defines.h
docs/: .gitignore
docs/call_sequence_diagrams/: handle_remote_peer_hangup.txt  handle_remote_peer_hangup_client_server.txt  hangup_a_call.txt  hangup_a_call_client_server.txt  receive_a_call.txt  receive_a_call_client_server.txt  start_a_call.txt  start_a_call_client_server.txt
src/: .gitignore  DocMainPage.h  Doxyfile  LICENSE  createdocs.sh
src/examples/: GoCast.html  GoCastVideo.html  GoCastVoice.html
src/examples/cmdline_audio_peer/: .gitignore  CMakeLists.txt  Call.cpp  Call.h  TestClientShell.h  TestDefaults.cpp  TestDefaults.h  TestPeerConnectionClient.cpp  TestPeerConnectionClient.h  TestPeerConnectionObserver.cpp  TestPeerConnectionObserver.h  TestSocketServer.cpp  TestSocketServer.h  ThreadSafeMessageQueue.cpp  ThreadSafeMessageQueue.h  ThreadSingle.h  cmdline_audio_peer.gyp  main.cpp  parsecmd.cpp  shell.cpp  shell.h  webrtc_projects.gyp
src/include/: ThreadSingle.h  rtc_common.h
src/include/anyoption/: anyoption.cpp  anyoption.h
src/js_api/projects/GCP/: CMakeLists.txt  Factory.cpp  GCP.cpp  GCP.h  GCPAPI.cpp  GCPAPI.h  GCPMediaConstraints.cpp  GCPMediaConstraints.h  GCPMediaStream.cpp  GCPMediaStream.h  GCPVideoRenderer.cpp  GCPVideoRenderer.h  GCPWebrtcCenter.cpp  GCPWebrtcCenter.h  PluginConfig.cmake  plugintest.htm
src/js_api/projects/GCP/Mac/: GCPVideoRendererMac.cpp  projectDef.cmake
src/js_api/projects/GCP/Mac/GoCastPlayer.pmdoc/: 01gcp-contents.xml  01gcp.xml  index.xml
src/js_api/projects/GCP/Win/: GCPVideoRendererWin.cpp  projectDef.cmake
src/js_api/projects/GCP/Win/WiX/: GCPInstaller.wxs
src/js_api/projects/GCP/X11/: GCPVideoRendererX11.cpp  projectDef.cmake
src/js_api/projects/WebrtcPeerConnection/: CMakeLists.txt  Factory.cpp  PluginConfig.cmake  WebrtcPeerConnection.cpp  WebrtcPeerConnection.h  WebrtcPeerConnectionAPI.cpp  WebrtcPeerConnectionAPI.h
src/js_api/projects/WebrtcPeerConnection/Mac/: projectDef.cmake
src/js_api/projects/WebrtcPeerConnection/Win/: projectDef.cmake
src/js_api/projects/WebrtcPeerConnection/Win/WiX/: WebrtcPeerConnectionInstaller.wxs
src/js_api/projects/WebrtcPeerConnection/X11/: projectDef.cmake
src/js_api/projects/WebrtcPlugin/: CMakeLists.txt  Factory.cpp  PluginConfig.cmake  WPLCall.cpp  WPLCall.h  WPLPeerConnectionClient.cpp  WPLPeerConnectionClient.h  WPLPeerConnectionObserver.cpp  WPLPeerConnectionObserver.h  WPLSocketServer.cpp  WPLSocketServer.h  WPLThreadSafeMessageQueue.cpp  WPLThreadSafeMessageQueue.h  WebrtcPlugin.cpp  WebrtcPlugin.h  WebrtcPluginAPI.cpp  WebrtcPluginAPI.h
src/js_api/projects/WebrtcPlugin/Mac/: WPLVideoRenderer.cpp  WPLVideoRenderer.h  projectDef.cmake
src/js_api/projects/WebrtcPlugin/Win/: projectDef.cmake
src/js_api/projects/WebrtcPlugin/Win/WiX/: WebrtcPluginInstaller.wxs
src/js_api/projects/WebrtcPlugin/X11/: WPLVideoRenderer.cpp  WPLVideoRenderer.h  projectDef.cmake
third_party_mods/FireBreath/: CMakeLists.txt  prepmac_GoCast.sh
third_party_mods/webrtc/trunk/src/modules/video_capture/main/source/: video_capture_impl.h
third_party_mods/webrtc/trunk/third_party_mods/libjingle/: libjingle.gyp
